--- a/app/views/materials/new.html.erb
+++ b/app/views/materials/new.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "New material" %>
 
-<h1>New material</h1>
+<h1>New Material</h1>
 
-<%= render "form", material: @material %>
+<div class="container">
+  <%= render "form", material: @material %> <!-- Renders the form partial for new material -->
+</div>
 
-<br>
-
-<div>
-  <%= link_to "Back to materials", materials_path %>
+<div class="mt-3">
+  <%= link_to "Back to materials", materials_path, class: "btn btn-secondary" %>
 </div>
