--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -1,10 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @material %>
+<h1><%= @material.store_name %></h1>
+<p><strong>Phone:</strong> <%= @material.phone %></p>
+<p><strong>Rate:</strong> <%= @material.rate %></p>
+<p><strong>Paid Value:</strong> <%= @material.paid_value %></p>
 
 <div>
   <%= link_to "Edit this material", edit_material_path(@material) %> |
   <%= link_to "Back to materials", materials_path %>
-
-  <%= button_to "Destroy this material", @material, method: :delete %>
+  <%= button_to "Destroy this material", @material, method: :delete, data: { confirm: "Are you sure?" } %>
 </div>
