--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,12 +1,12 @@
 <% content_for :title, "Editing project" %>
 
-<h1>Editing project</h1>
+<h1>Editing Project</h1>
 
-<%= render "form", project: @project %>
+<div class="container">
+  <%= render "form", project: @project %> <!-- Renders the form partial for editing project -->
+</div>
 
-<br>
-
-<div>
-  <%= link_to "Show this project", @project %> |
-  <%= link_to "Back to projects", projects_path %>
+<div class="mt-3">
+  <%= link_to "Show this project", @project, class: "btn btn-primary" %> |
+  <%= link_to "Back to projects", projects_path, class: "btn btn-secondary" %>
 </div>
