--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "New project" %>
 
-<h1>New project</h1>
+<h1>New Project</h1>
 
-<%= render "form", project: @project %>
+<div class="container">
+  <%= render "form", project: @project %> <!-- Renders the form partial for new project -->
+</div>
 
-<br>
-
-<div>
-  <%= link_to "Back to projects", projects_path %>
+<div class="mt-3">
+  <%= link_to "Back to projects", projects_path, class: "btn btn-secondary" %>
 </div>
