--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -1,47 +1,46 @@
-<%= form_with(model: worker) do |form| %>
+<%= form_with(model: worker, local: true) do |form| %>
   <% if worker.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(worker.errors.count, "error") %> prohibited this worker from being saved:</h2>
-
+    <div class="alert alert-danger">
+      <h4><%= pluralize(worker.errors.count, "error") %> prohibited this worker from being saved:</h4>
       <ul>
-        <% worker.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% worker.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div>
+  <div class="form-group">
     <%= form.label :project_id, style: "display: block" %>
-    <%= form.text_field :project_id %>
+    <%= form.collection_select :project_id, Project.all, :id, :name, { prompt: "Select a project" }, { class: "form-control" } %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, required: true, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone %>
+    <%= form.text_field :phone, required: true, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :rate, style: "display: block" %>
-    <%= form.number_field :rate %>
+    <%= form.number_field :rate, required: true, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :paid_value, style: "display: block" %>
-    <%= form.number_field :paid_value %>
+    <%= form.number_field :paid_value, required: true, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :worked_hours, style: "display: block" %>
-    <%= form.number_field :worked_hours %>
+    <%= form.number_field :worked_hours, required: true, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-success" %> <!-- Added Bootstrap class for styling -->
   </div>
 <% end %>
