--- a/app/views/workers/new.html.erb
+++ b/app/views/workers/new.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "New worker" %>
 
-<h1>New worker</h1>
+<h1>New Worker</h1>
 
-<%= render "form", worker: @worker %>
+<div class="container">
+  <%= render "form", worker: @worker %> <!-- Renders the form partial for new worker -->
+</div>
 
-<br>
-
-<div>
-  <%= link_to "Back to workers", workers_path %>
+<div class="mt-3">
+  <%= link_to "Back to workers", workers_path, class: "btn btn-secondary" %>
 </div>
