--- a/app/views/workers/show.html.erb
+++ b/app/views/workers/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @worker %>
+<%= render @worker %> <!-- Renders the worker's details using the _worker.html.erb partial -->
 
 <div>
-  <%= link_to "Edit this worker", edit_worker_path(@worker) %> |
-  <%= link_to "Back to workers", workers_path %>
+  <%= link_to "Edit this worker", edit_worker_path(@worker) %> | <!-- Link to edit the worker -->
+  <%= link_to "Back to workers", workers_path %> <!-- Link to go back to the index page of workers -->
 
-  <%= button_to "Destroy this worker", @worker, method: :delete %>
+  <%= button_to "Destroy this worker", @worker, method: :delete %> <!-- Button to delete the worker -->
 </div>
