--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,6 +12,10 @@
       <%= link_to "Edit", edit_project_path(project) %> | 
       <%= button_to "Destroy", project, method: :delete, data: { confirm: "Are you sure?" } %>
     </p>
+    <p>
+      <%= link_to "Add material to this project", new_project_material_path(project) %> |
+      <%= link_to "Add worker to this project", new_project_worker_path(project) %>
+    </p>
   <% end %>
 </div>
 
