--- a/app/views/materials/_form.html.erb
+++ b/app/views/materials/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: material, local: true) do |form| %>
+# app/views/materials/_form.html.erb
+<%= form_with(model: [material.project, material], local: true) do |form| %>
   <% if material.errors.any? %>
     <div class="alert alert-danger">
       <h4><%= pluralize(material.errors.count, "error") %> prohibited this material from being saved:</h4>
@@ -18,6 +19,11 @@
   <div class="form-group">
     <%= form.label :store_name, style: "display: block" %>
     <%= form.text_field :store_name, required: true, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :material_name, style: "display: block" %>
+    <%= form.text_field :material_name, required: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
