--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,4 @@
-<p style="color: green"><%= notice %></p>
-
+# app/views/projects/show.html.erb
 <h1><%= @project.name %></h1>
 <p><strong>Description:</strong> <%= @project.description %></p>
 
@@ -10,6 +9,7 @@
 </div>
 
 <h2>Materials</h2>
+<p><%= link_to "Add material to this project", new_project_material_path(@project) %></p>
 <div id="materials">
   <% @project.materials.each do |material| %>
     <%= render material %>
@@ -22,6 +22,7 @@
 </div>
 
 <h2>Workers</h2>
+<p><%= link_to "Add worker to this project", new_project_worker_path(@project) %></p>
 <div id="workers">
   <% @project.workers.each do |worker| %>
     <%= render worker %>
@@ -32,8 +33,3 @@
     </p>
   <% end %>
 </div>
-
-<p>
-  <%= link_to "Add material to this project", new_project_material_path(@project) %> |
-  <%= link_to "Add worker to this project", new_project_worker_path(@project) %>
-</p>
