--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: worker, local: true) do |form| %>
+# app/views/workers/_form.html.erb
+<%= form_with(model: [worker.project, worker], local: true) do |form| %>
   <% if worker.errors.any? %>
     <div class="alert alert-danger">
       <h4><%= pluralize(worker.errors.count, "error") %> prohibited this worker from being saved:</h4>
@@ -18,6 +19,11 @@
   <div class="form-group">
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name, required: true, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :job_title, style: "display: block" %>
+    <%= form.text_field :job_title, required: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
