--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -3,6 +3,7 @@
 <% content_for :title, "Materials" %>
 
 <h1>Materials</h1>
+<%= link_to "Add new material", new_material_path %>
 
 <div id="materials">
   <% @materials.each do |material| %>
@@ -11,8 +12,8 @@
       <%= link_to "Show this material", material %> |
       <%= link_to "Edit", edit_material_path(material) %> | 
       <%= button_to "Destroy", material, method: :delete, data: { confirm: "Are you sure?" } %>
+       <%= link_to "Back to project", projects_path %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "
