--- a/app/views/workers/_worker.html.erb
+++ b/app/views/workers/_worker.html.erb
@@ -1,6 +1,7 @@
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem; margin-bottom: 15px;">
   <div class="card-body">
     <h5 class="card-title"><%= worker.name %></h5>
+    <p class="card-text">Job Title: <%= worker.job_title %></p>
     <p class="card-text">Phone: <%= worker.phone %></p>
     <p class="card-text">Rate: <%= worker.rate %></p>
     <p class="card-text">Paid Value: <%= worker.paid_value %></p>
