--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,18 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <!-- Add any custom meta tags here -->
+  <!-- Additional meta tags -->
   <%= yield :head %>
 
-  <!-- Manifest and icons -->
-  <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="/icon.png" type="image/png">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/icon.png">
 
-  <!-- Bootstrap CSS -->
-  <!-- Update the stylesheet link to point to /assets/application.css -->
-  <link rel="stylesheet" href="/assets/application.css">
+  <!-- Bootstrap CSS via CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!-- Your Application's CSS -->
+  <%= stylesheet_link_tag "application", media: "all", "data-turbo-track": "reload" %>
 </head>
 
 <body>
@@ -55,7 +55,10 @@
     <%= yield %>
   </div>
 
-  <!-- JavaScript files -->
-  <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+  <!-- Bootstrap JavaScript Bundle via CDN (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+  <!-- Your Application's JavaScript -->
+  <%= javascript_include_tag "application", "data-turbo-track": "reload" %>
 </body>
 </html>
