--- a/app/views/materials/_form.html.erb
+++ b/app/views/materials/_form.html.erb
@@ -1,5 +1,5 @@
-# app/views/materials/_form.html.erb
-<%= form_with(model: [material.project, material], local: true) do |form| %>
+<!-- views/materials/_form.html.erb -->
+<%= form_with(model: [@project, @material], local: true) do |form| %>
   <% if material.errors.any? %>
     <div class="alert alert-danger">
       <h4><%= pluralize(material.errors.count, "error") %> prohibited this material from being saved:</h4>
@@ -12,36 +12,31 @@
   <% end %>
 
   <div class="form-group">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :description %> <!-- Example field -->
+    <%= form.text_area :description, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :quantity %> <!-- Example field -->
+    <%= form.number_field :quantity, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :unit_price %> <!-- Example field -->
+    <%= form.number_field :unit_price, step: "0.01", class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= form.label :project_id, style: "display: block" %>
     <%= form.collection_select :project_id, Project.all, :id, :name, { prompt: "Select a project" }, { class: "form-control" } %>
   </div>
 
-  <div class="form-group">
-    <%= form.label :store_name, style: "display: block" %>
-    <%= form.text_field :store_name, required: true, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :material_name, style: "display: block" %>
-    <%= form.text_field :material_name, required: true, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone, required: true, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :rate, style: "display: block" %>
-    <%= form.number_field :rate, required: true, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :paid_value, style: "display: block" %>
-    <%= form.number_field :paid_value, required: true, class: "form-control" %>
-  </div>
-
   <div>
-    <%= form.submit class: "btn btn-success" %> <!-- Added Bootstrap class for styling -->
+    <%= form.submit class: "btn btn-success" %>
   </div>
 <% end %>
