--- a/app/views/materials/index.html.erb
+++ b/app/views/materials/index.html.erb
@@ -1,19 +1,34 @@
-<p style="color: green"><%= notice %></p>
-
+<!-- views/materials/index.html.erb -->
 <% content_for :title, "Materials" %>
 
-<h1>Materials</h1>
-<%= link_to "Add new material", new_material_path %>
+<% if notice %>
+  <div class="alert alert-info">
+    <%= notice %>
+  </div>
+<% end %>
 
-<div id="materials">
+<h1 class="mb-4">Materials</h1>
+
+<%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary mb-4" %>
+
+<%= link_to "New Material", new_project_material_path(@project), class: "btn btn-primary mb-4" %>
+
+<div class="row">
   <% @materials.each do |material| %>
-    <%= render material %>
-    <p>
-      <%= link_to "Show this material", material %> |
-      <%= link_to "Edit", edit_material_path(material) %> | 
-      <%= button_to "Destroy", material, method: :delete, data: { confirm: "Are you sure?" } %>
-       <%= link_to "Back to project", projects_path %>
-    </p>
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <div class="card-body">
+          <h5 class="card-title"><%= material.store_name %></h5> <!-- Assuming material has a name -->
+          <!-- Add other material details if needed -->
+        </div>
+        <div class="card-footer">
+          <div class="btn-group" role="group">
+            <%= link_to "Show", project_material_path(@project, material), class: "btn btn-outline-info btn-sm" %>
+            <%= link_to "Edit", edit_project_material_path(@project, material), class: "btn btn-outline-warning btn-sm" %>
+            <%= button_to "Destroy", project_material_path(@project, material), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger btn-sm destroy-btn" %>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
-
