--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -17,10 +17,10 @@
 
   <div class="form-group">
     <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description, class: "form-control" %> <!-- Changed to text_area for better input -->
+    <%= form.text_area :description, class: "form-control" %>
   </div>
 
   <div>
-    <%= form.submit class: "btn btn-success" %> <!-- Added Bootstrap class for styling -->
+    <%= form.submit class: "btn btn-success" %>
   </div>
 <% end %>
