--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -3,10 +3,10 @@
 <h1>Editing Project</h1>
 
 <div class="container">
-  <%= render "form", project: @project %> <!-- Renders the form partial for editing project -->
+  <%= render "form", project: @project %>
 </div>
 
 <div class="mt-3">
-  <%= link_to "Show this project", @project, class: "btn btn-primary" %> |
+  <%= link_to "Show", @project, class: "btn btn-primary" %> |
   <%= link_to "Back to projects", projects_path, class: "btn btn-secondary" %>
 </div>
