--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,21 +1,40 @@
-<p style="color: green"><%= notice %></p>
-
 <% content_for :title, "Projects" %>
 
-<h1>Projects</h1>
-<%= link_to "New project", new_project_path %>
+<!-- Display notices with Bootstrap alert class -->
+<% if notice %>
+  <div class="alert alert-info">
+    <%= notice %>
+  </div>
+<% end %>
 
-<div id="projects">
+<h1 class="mb-4">Projects</h1>
+
+<!-- Button for creating a new project -->
+<%= link_to "New Project", new_project_path, class: "btn btn-primary mb-4" %>
+
+<!-- Container for projects with Bootstrap grid classes -->
+<div id="projects" class="row">
   <% @projects.each do |project| %>
-    <%= render project %>
-    <p>
-      <%= link_to "Show this project", project %>
-      <%= link_to "Edit", edit_project_path(project) %> | 
-      <%= button_to "Destroy", project, method: :delete, data: { confirm: "Are you sure?" } %>
-    </p>
-    <p>
-      <%= link_to "Add material to this project", new_project_material_path(project) %> |
-      <%= link_to "Add worker to this project", new_project_worker_path(project) %>
-    </p>
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <div class="card-body">
+          <!-- Display the project partial (assuming it contains the project details) -->
+          <%= render project %>
+        </div>
+        <div class="card-footer">
+          <!-- Project action buttons -->
+          <div class="btn-group" role="group">
+            <%= link_to "Show", project_path(project), class: "btn btn-outline-info btn-sm" %>
+            <%= link_to "Edit", edit_project_path(project), class: "btn btn-outline-warning btn-sm" %>
+            <%= button_to "Destroy", project_path(project), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger btn-sm destroy-btn" %>
+          </div>
+          <!-- Additional links for materials and workers -->
+          <div class="mt-3">
+            <%= link_to "Add Material", new_project_material_path(project), class: "btn btn-outline-success btn-sm me-2" %>
+            <%= link_to "Add Worker", new_project_worker_path(project), class: "btn btn-outline-success btn-sm" %>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
