--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -3,7 +3,7 @@
 <h1>New Project</h1>
 
 <div class="container">
-  <%= render "form", project: @project %> <!-- Renders the form partial for new project -->
+  <%= render "form", project: @project %>
 </div>
 
 <div class="mt-3">
