--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,34 +1,53 @@
-<h1><%= @project.name %></h1>
-<p><strong>Description:</strong> <%= @project.description %></p>
+<% content_for :title, "Project Details" %>
 
-<div>
-  <%= link_to "Edit this project", edit_project_path(@project) %> |
-  <%= link_to "Back to projects", projects_path %>
-  <%= button_to "Destroy this project", @project, method: :delete, data: { confirm: "Are you sure?" } %>
-</div>
+<h1 class="mb-4"><%= @project.name %></h1>
 
+<!-- Display notices with Bootstrap alert class -->
+<% if notice %>
+  <div class="alert alert-info">
+    <%= notice %>
+  </div>
+<% end %>
+<%= link_to 'Back to Projects', projects_path, class: "nav-link" %>
+<!-- Display associated materials -->
 <h2>Materials</h2>
-<p><%= link_to "Add material to this project", new_project_material_path(@project) %></p>
-<div id="materials">
+<%= link_to "Add Material", new_project_material_path(@project), class: "btn btn-success mb-4" %>
+<div id="materials" class="row">
   <% @project.materials.each do |material| %>
-    <%= render material %>
-    <p>
-      <%= link_to "Show this material", material %> |
-      <%= link_to "Edit", edit_material_path(material) %> | 
-      <%= button_to "Destroy", material, method: :delete, data: { confirm: "Are you sure?" } %>
-    </p>
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <div class="card-body">
+          <%= render material %>
+        </div>
+        <div class="card-footer">
+          <div class="btn-group" role="group">
+            <%= link_to "Edit", edit_project_material_path(@project, material), class: "btn btn-outline-warning btn-sm" %>
+            <%= button_to "Destroy", project_material_path(@project, material), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger btn-sm destroy-btn" %>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
 
+<!-- Display associated workers -->
 <h2>Workers</h2>
-<p><%= link_to "Add worker to this project", new_project_worker_path(@project) %></p>
-<div id="workers">
+<%= link_to "Add Worker", new_project_worker_path(@project), class: "btn btn-success mb-4" %>
+<div id="workers" class="row">
   <% @project.workers.each do |worker| %>
-    <%= render worker %>
-    <p>
-      <%= link_to "Show this worker", worker %> |
-      <%= link_to "Edit", edit_worker_path(worker) %> | 
-      <%= button_to "Destroy", worker, method: :delete, data: { confirm: "Are you sure?" } %>
-    </p>
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <div class="card-body">
+          <%= render worker %>
+        </div>
+        <div class="card-footer">
+          <div class="btn-group" role="group">
+            <%= link_to "Edit", edit_project_worker_path(@project, worker), class: "btn btn-outline-warning btn-sm" %>
+            <%= button_to "Destroy", project_worker_path(@project, worker), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger btn-sm destroy-btn" %>
+          </div>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
+<%= link_to 'Back to Projects', projects_path, class: "nav-link" %>
