--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -1,52 +1,47 @@
-# app/views/workers/_form.html.erb
-<%= form_with(model: [worker.project, worker], local: true) do |form| %>
+<%= form_with(model: [@project, worker], local: true) do |form| %>
   <% if worker.errors.any? %>
-    <div class="alert alert-danger">
-      <h4><%= pluralize(worker.errors.count, "error") %> prohibited this worker from being saved:</h4>
+    <div id="error_explanation">
+      <h2><%= pluralize(worker.errors.count, "error") %> prohibited this worker from being saved:</h2>
+
       <ul>
-        <% worker.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
+      <% worker.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= form.label :project_id, style: "display: block" %>
-    <%= form.collection_select :project_id, Project.all, :id, :name, { prompt: "Select a project" }, { class: "form-control" } %>
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name, required: true, class: "form-control" %>
+   <div class="field">
+    <%= form.label :job_title %>
+    <%= form.text_field :job_title, class: "form-control" %> <!-- Added job_title input -->
   </div>
 
-  <div class="form-group">
-    <%= form.label :job_title, style: "display: block" %>
-    <%= form.text_field :job_title, required: true, class: "form-control" %>
+  <div class="field">
+    <%= form.label :phone %>
+    <%= form.text_field :phone, class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= form.label :phone, style: "display: block" %>
-    <%= form.text_field :phone, required: true, class: "form-control" %>
+  <div class="field">
+    <%= form.label :rate %>
+    <%= form.number_field :rate, class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= form.label :rate, style: "display: block" %>
-    <%= form.number_field :rate, required: true, class: "form-control" %>
+  <div class="field">
+    <%= form.label :paid_value %>
+    <%= form.number_field :paid_value, class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= form.label :paid_value, style: "display: block" %>
-    <%= form.number_field :paid_value, required: true, class: "form-control" %>
+  <div class="field">
+    <%= form.label :worked_hours %>
+    <%= form.number_field :worked_hours, class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= form.label :worked_hours, style: "display: block" %>
-    <%= form.number_field :worked_hours, required: true, class: "form-control" %>
-  </div>
-
-  <div>
-    <%= form.submit class: "btn btn-success" %> <!-- Added Bootstrap class for styling -->
+  <div class="actions">
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
