--- a/app/views/materials/new.html.erb
+++ b/app/views/materials/new.html.erb
@@ -1,6 +1,12 @@
 <!-- views/materials/new.html.erb -->
-<% content_for :title, "New Material" %>
-
-<h1>New Material</h1>
-<%= render 'form', material: @material %>
-<%= link_to "Back to Materials", project_materials_path(@project), class: "btn btn-secondary mt-2" %>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="text-center mb-4">New Material</h1>
+      <%= render 'form', material: @material %>
+      <div class="text-end">
+        <%= link_to "Back to Materials", project_materials_path(@project), class: "btn btn-secondary mt-2" %>
+      </div>
+    </div>
+  </div>
+</div>
