--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -1,15 +1,30 @@
-<% content_for :title, "Material Details" %>
+<!-- views/materials/show.html.erb -->
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="text-center mb-4"><%= @material.store_name %> Details</h1>
+      <div class="card mb-3">
+        <div class="card-body">
+          <p class="card-text"><strong>Building Material:</strong> <%= @material.building_material %></p>
+          <p class="card-text"><strong>Phone:</strong> <%= @material.phone %></p>
+          <p class="card-text"><strong>Rate:</strong> <%= number_to_currency(@material.rate) %></p>
+          <p class="card-text"><strong>Paid Value:</strong> <%= number_to_currency(@material.paid_value) %></p>
+          <p class="card-text"><strong>Quantity:</strong> <%= @material.quantity || "N/A" %></p>
+          <p class="card-text"><strong>Observation:</strong> <%= @material.observation || "N/A" %></p>
+        </div>
+      </div>
 
-<h1><%= @material.store_name %></h1> <!-- Display the store name instead of name -->
-<p><strong>Phone:</strong> <%= @material.phone %></p>
-<p><strong>Rate:</strong> <%= number_to_currency(@material.rate) %></p>
-<p><strong>Paid Value:</strong> <%= number_to_currency(@material.paid_value) %></p>
-<p><strong>Quantity:</strong> <%= @material.quantity || 'N/A' %></p>
+<div class="d-flex justify-content-start mb-2">
+  <%= link_to "Edit", edit_project_material_path(@project, @material), class: "btn btn-outline-secondary btn-sm mx-1 show-btn" %>
+  <%= button_to "Destroy", project_material_path(@project, @material), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-secondary btn-sm mx-1 show-btn" %>
+  <%= link_to "Back to Materials", project_materials_path(@project), class: "btn btn-outline-secondary btn-sm mx-1 show-btn" %>
+</div>
 
-<%= link_to "Edit", edit_project_material_path(@project, @material), class: "btn btn-warning" %>
-<%= button_to "Destroy", project_material_path(@project, @material), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger destroy-btn" %>
-
-<div class="mt-2 d-flex">
-  <%= link_to "Back to Materials", project_materials_path(@project), class: "btn btn-secondary me-2" %>
-  <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
+<div class="row">
+  <div class="col-md-8 text-start"> 
+    <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
+  </div>
+</div>
+    </div>
+  </div>
 </div>
