--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,12 +1,26 @@
-<% content_for :title, "Editing project" %>
+<!-- app/views/projects/edit.html.erb -->
 
-<h1>Editing Project</h1>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="text-center mb-4">Edit Project</h1>
 
-<div class="container">
-  <%= render "form", project: @project %>
-</div>
+      <%= form_with(model: @project, local: true) do |form| %>
+        <div class="mb-3">
+          <%= form.label :name %>
+          <%= form.text_field :name, class: 'form-control' %>
+        </div>
 
-<div class="mt-3">
-  <%= link_to "Show", @project, class: "btn btn-primary" %> |
-  <%= link_to "Back to projects", projects_path, class: "btn btn-secondary" %>
+        <div class="mb-3">
+          <%= form.label :description %>
+          <%= form.text_area :description, class: 'form-control' %>
+        </div>
+
+        <div class="text-end">
+          <%= form.submit 'Update Project', class: 'btn btn-primary' %>
+          <%= link_to "Back to Projects", projects_path, class: "btn btn-secondary" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
