--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,22 +16,23 @@
 <div id="projects" class="row">
   <% @projects.each do |project| %>
     <div class="col-md-4 mb-4">
-      <div class="card h-100">
-        <div class="card-body">
+      <div class="card h-100 shadow-sm rounded">
+        <div class="card-body bg-light rounded-top">
           <!-- Display the project partial (assuming it contains the project details) -->
-          <%= render project %>
+          <h5 class="card-title"><%= project.name %></h5>
+          <p class="card-text"><%= project.description %></p>
         </div>
-        <div class="card-footer">
-          <!-- Project action buttons -->
-          <div class="btn-group" role="group">
-            <%= link_to "Show", project_path(project), class: "btn btn-outline-info btn-sm" %>
-            <%= link_to "Edit", edit_project_path(project), class: "btn btn-outline-warning btn-sm" %>
-            <%= button_to "Destroy", project_path(project), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger btn-sm destroy-btn" %>
+        <div class="card-footer bg-white border-0">
+          <!-- Project action buttons with gray color and hover effect -->
+          <div class="btn-group mb-2" role="group">
+            <%= link_to "Show", project_path(project), class: "btn btn-outline-secondary btn-sm mx-1 show-btn" %>
+            <%= link_to "Edit", edit_project_path(project), class: "btn btn-outline-secondary btn-sm mx-1 edit-btn" %>
+            <%= button_to "Destroy", project_path(project), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-secondary btn-sm mx-1 destroy-btn" %>
           </div>
-          <!-- Additional links for materials and workers -->
-          <div class="mt-3">
-            <%= link_to "Add Material", new_project_material_path(project), class: "btn btn-outline-success btn-sm me-2" %>
-            <%= link_to "Add Worker", new_project_worker_path(project), class: "btn btn-outline-success btn-sm" %>
+          <!-- Additional links for materials and workers with spacing and shadow -->
+          <div class="d-flex justify-content-start mt-3">
+            <%= link_to "Add Material", new_project_material_path(project), class: "btn btn-outline-success btn-sm shadow-sm me-2" %>
+            <%= link_to "Add Worker", new_project_worker_path(project), class: "btn btn-outline-success btn-sm shadow-sm" %>
           </div>
         </div>
       </div>
