--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -50,4 +50,7 @@
     </div>
   <% end %>
 </div>
-<%= link_to 'Back to Projects', projects_path, class: "nav-link" %>
+<div class="row">
+<div class="col-md-12 text-left mb-4">
+  <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
+</div>
