--- a/app/views/workers/_form.html.erb
+++ b/app/views/workers/_form.html.erb
@@ -1,47 +1,51 @@
-<%= form_with(model: [@project, worker], local: true) do |form| %>
-  <% if worker.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(worker.errors.count, "error") %> prohibited this worker from being saved:</h2>
+<!-- views/workers/_form.html.erb -->
+      <%= form_with(model: [@project, worker], local: true) do |form| %>
+        <% if worker.errors.any? %>
+          <div class="alert alert-danger">
+            <h4><%= pluralize(worker.errors.count, "error") %> prohibited this worker from being saved:</h4>
+            <ul>
+              <% worker.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
 
-      <ul>
-      <% worker.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <div class="form-group mb-3">
+          <%= form.label :name %>
+          <%= form.text_field :name, class: "form-control" %>
+        </div>
+
+        <div class="form-group mb-3">
+          <%= form.label :job_title %>
+          <%= form.text_field :job_title, class: "form-control" %>
+        </div>
+
+        <div class="form-group mb-3">
+          <%= form.label :phone %>
+          <%= form.text_field :phone, class: "form-control" %>
+        </div>
+
+        <div class="form-group mb-3">
+          <%= form.label :rate %>
+          <%= form.number_field :rate, class: "form-control" %>
+        </div>
+
+        <div class="form-group mb-3">
+          <%= form.label :paid_value %>
+          <%= form.number_field :paid_value, class: "form-control" %>
+        </div>
+
+        <div class="form-group mb-3">
+          <%= form.label :worked_hours %>
+          <%= form.number_field :worked_hours, class: "form-control" %>
+        </div>
+
+        <div class="text-end">
+          <%= form.submit class: "btn btn-primary" %>
+          <%= link_to "Back to Workers", project_workers_path(@project), class: "btn btn-secondary" %>
+        </div>
       <% end %>
-      </ul>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "form-control" %>
   </div>
-
-   <div class="field">
-    <%= form.label :job_title %>
-    <%= form.text_field :job_title, class: "form-control" %> <!-- Added job_title input -->
-  </div>
-
-  <div class="field">
-    <%= form.label :phone %>
-    <%= form.text_field :phone, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :rate %>
-    <%= form.number_field :rate, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :paid_value %>
-    <%= form.number_field :paid_value, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= form.label :worked_hours %>
-    <%= form.number_field :worked_hours, class: "form-control" %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit class: "btn btn-primary" %>
-  </div>
-<% end %>
+</div>
