--- a/app/views/workers/_worker.html.erb
+++ b/app/views/workers/_worker.html.erb
@@ -1,10 +1,19 @@
-<div class="card" style="width: 18rem; margin-bottom: 15px;">
-  <div class="card-body">
-    <h5 class="card-title"><%= worker.name %></h5>
-    <p class="card-text">Job Title: <%= worker.job_title %></p>
-    <p class="card-text">Phone: <%= worker.phone %></p>
-    <p class="card-text">Rate: <%= worker.rate %></p>
-    <p class="card-text">Paid Value: <%= worker.paid_value %></p>
-    <p class="card-text">Worked Hours: <%= worker.worked_hours %></p>
+<!-- views/workers/_worker.html.erb -->
+<div class="col-md-4 mb-3"> <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title"><%= worker.name %></h5>
+      <p class="card-text"><strong>Job Title:</strong> <%= worker.job_title || 'N/A' %></p>
+      <p class="card-text"><strong>Phone:</strong> <%= worker.phone %></p>
+      <p class="card-text"><strong>Rate:</strong> <%= number_to_currency(worker.rate) %></p>
+      <p class="card-text"><strong>Paid Value:</strong> <%= number_to_currency(worker.paid_value) %></p>
+      <p class="card-text"><strong>Worked Hours:</strong> <%= worker.worked_hours %></p>
+    </div>
+    <div class="card-footer">
+      <div class="btn-group" role="group" aria-label="Button group">
+        <%= link_to 'Show', project_worker_path(@project, worker), class: "btn btn-outline-secondary btn-sm mx-1" %>
+        <%= link_to 'Edit', edit_project_worker_path(@project, worker), class: "btn btn-outline-secondary btn-sm mx-1" %>
+        <%= button_to 'Destroy', project_worker_path(@project, worker), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-secondary btn-sm mx-1" %>
+      </div>
+    </div>
   </div>
 </div>
