--- a/app/views/workers/edit.html.erb
+++ b/app/views/workers/edit.html.erb
@@ -1,3 +1,46 @@
-<h1>Edit Worker</h1>
-<%= render "form", worker: @worker %>
-<%= link_to "Back to Workers", project_workers_path(@project), class: "btn btn-secondary" %>
+<!-- views/workers/edit.html.erb -->
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <h2 class="text-center mb-4">Edit Worker</h2>
+
+      <%= form_with(model: [@project, @worker], local: true, class: 'form') do |form| %>
+        <div class="mb-3">
+          <%= form.label :name, class: 'form-label' %>
+          <%= form.text_field :name, class: 'form-control' %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :job_title, class: 'form-label' %>
+          <%= form.text_field :job_title, class: 'form-control' %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :phone, class: 'form-label' %>
+          <%= form.text_field :phone, class: 'form-control' %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :rate, class: 'form-label' %>
+          <%= form.text_field :rate, class: 'form-control' %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :paid_value, class: 'form-label' %>
+          <%= form.text_field :paid_value, class: 'form-control' %>
+        </div>
+
+        <div class="mb-3">
+          <%= form.label :worked_hours, class: 'form-label' %>
+          <%= form.number_field :worked_hours, class: 'form-control' %>
+        </div>
+        <div class="form-group mt-4">
+          <%= form.submit 'Update Worker', class: 'btn btn-primary' %>
+        </div>
+        <div class="form-group mt-2">
+          <%= link_to 'Back to Workers', project_workers_path(@project), class: 'btn btn-secondary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
