--- a/app/views/workers/new.html.erb
+++ b/app/views/workers/new.html.erb
@@ -1,4 +1,12 @@
-<h1>New Worker</h1>
-<%= render "form", worker: @worker %>
-<%= link_to "Back to Workers", project_workers_path(@project), class: "btn btn-secondary" %>
-
+<!-- views/workers/new.html.erb -->
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="text-center mb-4">New Worker</h1>
+      <%= render 'form', worker: @worker %>
+      <div class="text-end">
+        <%= link_to "Back to Workers", project_workers_path(@project), class: "btn btn-secondary mt-2" %>
+      </div>
+    </div>
+  </div>
+</div>
