--- a/app/views/workers/show.html.erb
+++ b/app/views/workers/show.html.erb
@@ -1,7 +1,30 @@
-<h1>Worker Details</h1>
+<!-- views/workers/show.html.erb -->
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <h1 class="text-center mb-4"><%= @worker.name %> Details</h1>
+      <div class="card mb-3">
+        <div class="card-body">
+          <p class="card-text"><strong>Name:</strong> <%= @worker.name %></p>
+          <p class="card-text"><strong>Job Title:</strong> <%= @worker.job_title %></p>
+          <p class="card-text"><strong>Phone:</strong> <%= @worker.phone %></p>
+          <p class="card-text"><strong>Rate:</strong> <%= number_to_currency(@worker.rate) %></p>
+          <p class="card-text"><strong>Paid Value:</strong> <%= number_to_currency(@worker.paid_value) %></p>
+          <p class="card-text"><strong>Worked Hours:</strong> <%= @worker.worked_hours %></p>
+        </div>
+      </div>
 
-<%= render @worker %>
+      <div class="d-flex justify-content-start mb-2">
+        <%= link_to "Edit", edit_project_worker_path(@project, @worker), class: "btn btn-outline-secondary btn-sm mx-1" %>
+        <%= button_to "Destroy", project_worker_path(@project, @worker), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-secondary btn-sm mx-1" %>
+        <%= link_to "Back to Workers", project_workers_path(@project), class: "btn btn-outline-secondary btn-sm mx-1" %>
+      </div>
 
-<%= link_to "Edit this Worker", edit_project_worker_path(@worker.project, @worker), class: "btn btn-primary" %> |
-<%= button_to "Destroy this Worker", project_worker_path(@worker.project, @worker), method: :delete, class: "btn btn-danger" %> |
-<%= link_to "Back to Workers", project_workers_path(@worker.project), class: "btn btn-secondary" %>
+      <div class="row">
+        <div class="col-md-8 text-start">
+          <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
