More styling of materials/projects/workers

--- a/app/views/materials/_form.html.erb
+++ b/app/views/materials/_form.html.erb
@@ -61,5 +61,6 @@
 
   <div class="form-group mt-4"> <!-- Added mt-4 for top margin -->
     <%= form.submit class: "btn btn-primary" %>
+    <%= link_to "Back to Project", project_path(@project), class: "btn btn-secondary" %>
   </div>
 <% end %>
