--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -16,7 +16,7 @@
           <%= form.text_area :description, class: 'form-control' %>
         </div>
 
-        <div class="text-end">
+        <div class="text-start">
           <%= form.submit 'Update Project', class: 'btn btn-primary' %>
           <%= link_to "Back to Projects", projects_path, class: "btn btn-secondary" %>
         </div>
