--- a/app/views/materials/_material.html.erb
+++ b/app/views/materials/_material.html.erb
@@ -1,6 +1,6 @@
 <!-- views/materials/_material.html.erb -->
-<div class="card mb-3" style="width: 18rem;">
-  <div class="card-body">
+<div class="card shadow-sm mb-5 bg-body rounded" style="width: 18rem;">
+  <div class="card-body shadow-lg p-3">
     <h5 class="card-title"><%= material.store_name %></h5>
     <p class="card-text"><strong>Phone:</strong> <%= material.phone %></p>
     <p class="card-text"><strong>Building Material:</strong> <%= material.building_material %></p>
@@ -9,11 +9,11 @@
     <p class="card-text"><strong>Quantity:</strong> <%= material.quantity || "N/A" %></p>
     <p class="card-text"><strong>Observation:</strong> <%= material.observation || "N/A" %></p>
   </div>
-  <div class="card-footer">
-<div class="btn-group" role="group" aria-label="Button group">
-  <%= link_to "Show", project_material_path(@project, material), class: "btn btn-outline-secondary btn-sm mx-1" %>
-  <%= link_to "Edit", edit_project_material_path(@project, material), class: "btn btn-outline-secondary btn-sm mx-1" %>
-  <%= button_to "Destroy", project_material_path(@project, material), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-secondary btn-sm mx-1 destroy-btn" %>
-</div>
+  <div class="card-footer shadow p-3">
+  <div class="btn-group" role="group" aria-label="Button group">
+    <%= link_to "Show", project_material_path(@project, material), class: "btn btn-outline-secondary btn-sm mx-1" %>
+    <%= link_to "Edit", edit_project_material_path(@project, material), class: "btn btn-outline-secondary btn-sm mx-1" %>
+    <%= button_to "Delete", project_material_path(@project, material), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-secondary btn-sm mx-1 destroy-btn" %>
   </div>
+ </div>
 </div>
