--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -20,7 +20,8 @@
     <%= form.text_area :description, class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.submit class: "btn btn-success" %>
+  <div class="form-group mt-4">
+    <%= form.submit class: "btn btn-primary" %>
+    <%= link_to "Back to Projects", projects_path, class: "btn btn-secondary" %>
   </div>
 <% end %>
