--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,4 @@
-<div class="card mb-3" style="width: 18rem;">
+<div class="card mb-3 shadow p-3" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title"><%= project.name %></h5>
     <p class="card-text"><%= project.description %></p>
