--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,8 +16,8 @@
 <div id="projects" class="row">
   <% @projects.each do |project| %>
     <div class="col-md-4 mb-4">
-      <div class="card h-100 shadow-sm rounded">
-        <div class="card-body bg-light rounded-top">
+      <div class="card h-100 shadow-lg p-3 rounded">
+        <div class="card-body" style="background-color: #e5e5e5; border-radius: 0.25rem;">
           <!-- Display the project partial (assuming it contains the project details) -->
           <h5 class="card-title"><%= project.name %></h5>
           <p class="card-text"><%= project.description %></p>
@@ -27,12 +27,12 @@
           <div class="btn-group mb-2" role="group">
             <%= link_to "Show", project_path(project), class: "btn btn-outline-secondary btn-sm mx-1 show-btn" %>
             <%= link_to "Edit", edit_project_path(project), class: "btn btn-outline-secondary btn-sm mx-1 edit-btn" %>
-            <%= button_to "Destroy", project_path(project), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-secondary btn-sm mx-1 destroy-btn" %>
+            <%= button_to "Delete", project_path(project), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-secondary btn-sm mx-1 destroy-btn hover-danger" %>
           </div>
           <!-- Additional links for materials and workers with spacing and shadow -->
           <div class="d-flex justify-content-start mt-3">
-            <%= link_to "Add Material", new_project_material_path(project), class: "btn btn-outline-success btn-sm shadow-sm me-2" %>
-            <%= link_to "Add Worker", new_project_worker_path(project), class: "btn btn-outline-success btn-sm shadow-sm" %>
+            <%= link_to "Add Material", new_project_material_path(project), class: "btn btn-outline-primary btn-sm shadow-sm me-2" %>
+            <%= link_to "Add Worker", new_project_worker_path(project), class: "btn btn-outline-primary btn-sm shadow-sm" %>
           </div>
         </div>
       </div>
