--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -8,43 +8,31 @@
     <%= notice %>
   </div>
 <% end %>
-<%= link_to 'Back to Projects', projects_path, class: "nav-link" %>
+<%= link_to "Back to Project", projects_path %>
 <!-- Display associated materials -->
 <h2>Materials</h2>
-<%= link_to "Add Material", new_project_material_path(@project), class: "btn btn-success mb-4" %>
+<%= link_to "Add Material", new_project_material_path(@project), class: "btn btn-primary mb-4" %>
 <div id="materials" class="row">
   <% @project.materials.each do |material| %>
     <div class="col-md-4 mb-4">
-      <div class="card h-100">
+      <div class="card h-100 shadow-lg p-3">
         <div class="card-body">
           <%= render material %>
-        </div>
-        <div class="card-footer">
-          <div class="btn-group" role="group">
-            <%= link_to "Edit", edit_project_material_path(@project, material), class: "btn btn-outline-warning btn-sm" %>
-            <%= button_to "Destroy", project_material_path(@project, material), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger btn-sm destroy-btn" %>
-          </div>
         </div>
       </div>
     </div>
   <% end %>
 </div>
-
+<%# <div class="card h-100 shadow p-3 mb-5 bg-body rounded"></div> %>
 <!-- Display associated workers -->
 <h2>Workers</h2>
-<%= link_to "Add Worker", new_project_worker_path(@project), class: "btn btn-success mb-4" %>
+<%= link_to "Add Worker", new_project_worker_path(@project), class: "btn btn-primary mb-4" %>
 <div id="workers" class="row">
   <% @project.workers.each do |worker| %>
     <div class="col-md-4 mb-4">
-      <div class="card h-100">
+      <div class="card h-100 shadow-lg p-3">
         <div class="card-body">
           <%= render worker %>
-        </div>
-        <div class="card-footer">
-          <div class="btn-group" role="group">
-            <%= link_to "Edit", edit_project_worker_path(@project, worker), class: "btn btn-outline-warning btn-sm" %>
-            <%= button_to "Destroy", project_worker_path(@project, worker), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger btn-sm destroy-btn" %>
-          </div>
         </div>
       </div>
     </div>
